--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,62 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: Whitney, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
 .width {
     width: 800px;
 }
+
+button{
+    background-color: white;
+    border-radius: 20px;
+    font-size: 11px;
+    border: 0;
+    margin: 0 15px;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+   font-size: 14px;
+}
+
+#img-logo{
+    width: 100px;
+}
+
+h1{
+    padding: 35px 0;
+    font-size: 45px;
+}
+
+
 /* Header */
 
 header{
-    background-color: lightblue;
+    background-image: url('../img/jumbo.png');
+    background-size: cover;
+}
+
+.accedi{
+    padding: 10px;
+}
+
+.spotbottom{
+    padding: 15px;
+}
+
+.bg-black{
+    background-color: black;
+    color: white;
+}
+p{
+    padding-bottom: 25px;
+}
+
+.spot{
+    font-size: 18px;
 }
 
 .nav-bar{
@@ -25,7 +74,6 @@ header{
 
 .spotlight{
     height: 400px;
-    background-color: blue;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,25 +83,25 @@ header{
 .nav-logo{
     height: 30px;
     width: 25%;
-    background-color: orange;
-    border: 1px dashed black;
     padding: 5px;
+    color: white;
 }
 
 .nav-link{
     height: 30px;
     width: 50%;
-    background-color: orange;
-    border: 1px dashed black;
     text-align: center;
     padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .nav-login{
     height: 30px;
     width: 25%;
-    background-color: orange;
-    border: 1px dashed black;
     text-align: right;
     padding: 5px;
 }
@@ -61,8 +109,8 @@ header{
 .spotmain{
     min-height: 300px;
     width: 700px;
-    background-color: purple;
-    border: 1px dashed black;
+    text-align: center;
+    color: white;
 }
 
 /* Main */
